# ollama_llamaindex

./: .gitignore  README.md  pyproject.toml
src/: class_rag.py  custom_retriver.py  simple_mmmodel.py  simple_multi_agents.py  simple_rag_agents.py  simple_structured.py
src/libs/: llms.py  retrival.py  tools.py
src/llamaindex/: __init__.py
